# mpidc-windows

./: BUILD-ON-GITHUB.md  BUILD_WINDOWS.md  ERRORS-FIXED.md  FIX-ICON-ERROR.md  INSTALLER-COMPARISON.md  MAC-VS-WINDOWS-BUILD.md  OVERVIEW.txt  PROJECT_SUMMARY.md  QUICK-INSTALLER-GUIDE.txt  QUICKSTART.md  README.md  RUN-THIS-FIRST.md  SETUP.md  START_HERE.md  WINDOWS-INSTALLER-GUIDE.md  build-windows.bat  build-windows.ps1  create-icon.sh  create-placeholder-icons.sh  generate-icons.sh  generate-simple-icon.py  index.html  install-rust-macos.sh  main.js  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
